--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "serve": "live-server public/",
-    "build": "webpack --watch",
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json --watch"
   },
@@ -16,6 +17,7 @@
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
+    "babel-plugin-dynamic-import-node": "^2.3.0",
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-object-rest-spread": "6.23.0",
     "babel-preset-env": "1.5.2",
@@ -24,6 +26,7 @@
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "3.0.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "jest": "20.0.4",
     "live-server": "^1.2.1",
     "moment": "2.18.1",
@@ -35,6 +38,8 @@
     "react-addons-shallow-compare": "15.6.0",
     "react-dates": "12.7.0",
     "react-dom": "16.0.0",
+    "react-lazyload": "^2.6.5",
+    "react-loadable": "^5.5.0",
     "react-modal": "2.2.2",
     "react-redux": "5.0.5",
     "react-router-dom": "^5.1.2",
