--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "author": "Julian Cutajar",
   "license": "MIT",
   "scripts": {
-    "serve": "live-server public/",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
@@ -25,13 +24,8 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
-    "enzyme": "3.0.0",
-    "enzyme-adapter-react-16": "1.0.0",
-    "enzyme-to-json": "3.0.1",
     "express": "4.15.4",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "jest": "20.0.4",
-    "live-server": "^1.2.1",
     "moment": "2.18.1",
     "node-sass": "^4.13.1",
     "normalize.css": "7.0.0",
@@ -46,19 +40,24 @@
     "react-modal": "2.2.2",
     "react-redux": "5.0.5",
     "react-router-dom": "^5.1.2",
-    "react-test-renderer": "16.0.0",
     "redux": "3.7.2",
     "sass-loader": "^8.0.2",
     "style-loader": "0.18.2",
     "uuid": "3.1.0",
     "validator": "^13.0.0",
-    "webpack": "^4.42.1",
-    "webpack-dev-server": "^3.10.3"
+    "webpack": "^4.42.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@types/react": "^16.9.25",
     "redux-mock-store": "^1.5.4",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "enzyme": "3.0.0",
+    "enzyme-adapter-react-16": "1.0.0",
+    "enzyme-to-json": "3.0.1",
+    "jest": "20.0.4",
+    "live-server": "^1.2.1",
+    "react-test-renderer": "16.0.0",
+    "webpack-dev-server": "^3.10.3"
   }
 }
