--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "moment": "2.18.1",
     "node-sass": "^4.13.1",
     "normalize.css": "7.0.0",
+    "numeral": "2.0.6",
     "raf": "3.3.2",
     "raf-polyfill": "^1.0.0",
     "react": "16.0.0",
@@ -50,14 +51,14 @@
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@types/react": "^16.9.25",
-    "redux-mock-store": "^1.5.4",
-    "webpack-cli": "^3.3.11",
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "3.0.1",
     "jest": "20.0.4",
     "live-server": "^1.2.1",
     "react-test-renderer": "16.0.0",
+    "redux-mock-store": "^1.5.4",
+    "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   }
 }
