Setup test database env

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "test": "jest --config=jest.config.json --watch",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json --watch",
     "start": "node server/server.js",
     "heroku-postbuild": "yarn run build:prod"
   },
@@ -26,6 +26,7 @@
     "css-loader": "0.28.4",
     "express": "4.15.4",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "firebase": "4.2.0",
     "moment": "2.18.1",
     "node-sass": "^4.13.1",
     "normalize.css": "7.0.0",
@@ -42,6 +43,7 @@
     "react-redux": "5.0.5",
     "react-router-dom": "^5.1.2",
     "redux": "3.7.2",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^8.0.2",
     "style-loader": "0.18.2",
     "uuid": "3.1.0",
@@ -51,13 +53,15 @@
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@types/react": "^16.9.25",
+    "cross-env": "5.0.5",
+    "dotenv": "4.0.0",
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "3.0.1",
     "jest": "20.0.4",
     "live-server": "^1.2.1",
     "react-test-renderer": "16.0.0",
-    "redux-mock-store": "^1.5.4",
+    "redux-mock-store": "1.2.3",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   }
